# tomnet

./: .gitignore  CMakeLists.txt  README.md
3rd/: 3rd-build.sh
3rd/asio/: Makefile.am  Readme.md  asio.hpp
3rd/asio/asio/: any_io_executor.hpp  associated_allocator.hpp  associated_executor.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_io_object.hpp  basic_raw_socket.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  bind_executor.hpp  buffer.hpp  buffered_read_stream.hpp  buffered_read_stream_fwd.hpp  buffered_stream.hpp  buffered_stream_fwd.hpp  buffered_write_stream.hpp  buffered_write_stream_fwd.hpp  buffers_iterator.hpp  co_spawn.hpp  completion_condition.hpp  compose.hpp  connect.hpp  coroutine.hpp  deadline_timer.hpp  defer.hpp  detached.hpp  dispatch.hpp  error.hpp  error_code.hpp  (+54 more)
3rd/asio/asio/detail/: array.hpp  array_fwd.hpp  assert.hpp  atomic_count.hpp  base_from_completion_cond.hpp  bind_handler.hpp  blocking_executor_op.hpp  buffer_resize_guard.hpp  buffer_sequence_adapter.hpp  buffered_stream_storage.hpp  bulk_executor_op.hpp  call_stack.hpp  chrono.hpp  chrono_time_traits.hpp  completion_handler.hpp  concurrency_hint.hpp  conditionally_enabled_event.hpp  conditionally_enabled_mutex.hpp  config.hpp  consuming_buffers.hpp  cstddef.hpp  cstdint.hpp  date_time_fwd.hpp  deadline_timer_service.hpp  dependent_type.hpp  descriptor_ops.hpp  descriptor_read_op.hpp  descriptor_write_op.hpp  dev_poll_reactor.hpp  epoll_reactor.hpp  event.hpp  eventfd_select_interrupter.hpp  executor_function.hpp  executor_op.hpp  fd_set_adapter.hpp  fenced_block.hpp  functional.hpp  future.hpp  gcc_arm_fenced_block.hpp  gcc_hppa_fenced_block.hpp  (+162 more)
3rd/asio/asio/execution/: allocator.hpp  any_executor.hpp  bad_executor.hpp  blocking.hpp  blocking_adaptation.hpp  bulk_execute.hpp  bulk_guarantee.hpp  connect.hpp  context.hpp  context_as.hpp  execute.hpp  executor.hpp  invocable_archetype.hpp  mapping.hpp  occupancy.hpp  operation_state.hpp  outstanding_work.hpp  prefer_only.hpp  receiver.hpp  receiver_invocation_error.hpp  relationship.hpp  schedule.hpp  scheduler.hpp  sender.hpp  set_done.hpp  set_error.hpp  set_value.hpp  start.hpp  submit.hpp
3rd/asio/asio/generic/: basic_endpoint.hpp  datagram_protocol.hpp  raw_protocol.hpp  seq_packet_protocol.hpp  stream_protocol.hpp
3rd/asio/asio/impl/: awaitable.hpp  buffered_read_stream.hpp  buffered_write_stream.hpp  co_spawn.hpp  compose.hpp  connect.hpp  defer.hpp  detached.hpp  dispatch.hpp  error.ipp  error_code.ipp  execution_context.hpp  execution_context.ipp  executor.hpp  executor.ipp  handler_alloc_hook.ipp  io_context.hpp  io_context.ipp  multiple_exceptions.ipp  post.hpp  read.hpp  read_at.hpp  read_until.hpp  redirect_error.hpp  serial_port_base.hpp  serial_port_base.ipp  spawn.hpp  src.cpp  src.hpp  system_context.hpp  system_context.ipp  system_executor.hpp  thread_pool.hpp  thread_pool.ipp  use_awaitable.hpp  use_future.hpp  write.hpp  write_at.hpp
3rd/asio/asio/ip/: address.hpp  address_v4.hpp  address_v4_iterator.hpp  address_v4_range.hpp  address_v6.hpp  address_v6_iterator.hpp  address_v6_range.hpp  bad_address_cast.hpp  basic_endpoint.hpp  basic_resolver.hpp  basic_resolver_entry.hpp  basic_resolver_iterator.hpp  basic_resolver_query.hpp  basic_resolver_results.hpp  host_name.hpp  icmp.hpp  multicast.hpp  network_v4.hpp  network_v6.hpp  resolver_base.hpp  resolver_query_base.hpp  tcp.hpp  udp.hpp  unicast.hpp  v6_only.hpp
3rd/asio/asio/local/: basic_endpoint.hpp  connect_pair.hpp  datagram_protocol.hpp  stream_protocol.hpp
3rd/concurrentqueue/: blockingconcurrentqueue.h  concurrentqueue.h
3rd/libs/x64-linux/: libtbbmalloc.so.2  libtbbmalloc_proxy.so.2
3rd/libs/x64-windows/: libprotobuf.lib
cmake/: CMakeLists.example  build_config.cmake  common.cmake  coverage.cmake  direct_use_vcpkg.cmake  execute.cmake  filter_list.cmake  output_bin.cmake  proj_directory.cmake  subdir.cmake  tomvcpkg.cmake  use_vcpkg.cmake  vs_dir_proj.cmake  vs_proj_debug.cmake
examples/: CMakeLists.txt  bus.pb.cc  bus.pb.h  client-test.cpp  login.pb.cc  login.pb.h  main.cc  main.cpp  main_option.h  net_msg_test_help.cpp  net_msg_test_help.h  network.cc  network.h  server-test.cpp  ss_proto.pb.cc  ss_proto.pb.h  stylecop.json  tellist.pb.cc  tellist.pb.h  tellist.proto
tomnet/: CMakeLists.txt
tomnet/base/: CMakeLists.txt  any.h  base_common.h  buffer.h  codec.h  google-inl.h  loging.h  misc.h  network.cpp  network.h  noncopyable.h  pb_codec.cpp  pb_codec.h  pb_dispatcher.h  pb_message_helper.h  string_piece.h  tomnet_malloc.h
tomnet/base/codec/: pb_codec.h  pb_dispatcher.h
tomnet/net/: CMakeLists.txt  asio_channel.cpp  asio_channel.h  asio_client_handler.cpp  asio_client_handler.h  asio_event_loop.cpp  asio_event_loop.h  asio_handler.h  asio_network.cpp  asio_network.h  asio_server_handler.cpp  asio_server_handler.h  asio_tcp_server.cpp  asio_tcp_server.h  default-network-protocol.h  default-packet-header.cpp  default-packet-header.h  default_packet_header.cpp  default_packet_header.h  dll_export.h  event_loop_thread.cpp  event_loop_thread.h  event_loop_thread_pool.cpp  event_loop_thread_pool.h  handler_manager.cpp  handler_manager.h  iclient-networking.h  inetworking.h  message_queue.cpp  message_queue.h  net_define.h  net_protocal.cpp  network_traffic.cpp  network_traffic.h  protobuf-codec.cpp  protobuf-codec.h  protobuf-networking.h  server_status.h  tcp_server_manager.cpp  tcp_server_manager.h  (+2 more)
tools/: bench-client.sh  configure_vcpkg_dev.ps1
tools/Proto/: GenCSCode.cmd
tools/Proto/src/: Fight.cs  Login.cs  Tellist.cs  fight.pb.cc  fight.pb.h  fight.proto  login.pb.cc  login.pb.h  login.proto  tellist.pb.cc  tellist.pb.h  tellist.proto
tools/protobuf/: protocol.bat  readme.md
tools/protobuf/pb/: tellist.pb.h
tools/protobuf/proto/: tellist.proto
(+170 files in other folders)
