cmake_minimum_required(VERSION 2.8.7)
file(GLOB_RECURSE SRCS_LIST  *.h *.inl *.cpp *.c *.cc *.cxx)
set(ALL_FILES ${SRCS_LIST})
source_group_by_dir("${ALL_FILES}")
add_library(tomnet SHARED ${ALL_FILES})
add_definitions(-DTOM_TOM_NET_DLL_EXPORT)
add_dependencies(tomnet tomnet_base)
if(NOT WIN32)
    target_link_libraries(tomnet tomnet_base pthread rt jemalloc)
else()
	target_link_libraries(tomnet tomnet_base libprotobuf)
endif()
