cmake_minimum_required(VERSION 2.8.7)
file(GLOB_RECURSE SRCS_LIST  *.h *.inl *.cpp *.c *.cc *.cxx)
set(ALL_FILES ${SRCS_LIST})
source_group_by_dir("${ALL_FILES}")
add_library(tomnet SHARED ${ALL_FILES})
add_definitions(-DTOM_TOM_NET_DLL_EXPORT)
add_dependencies(tomnet tomnet_base)
if(NOT WIN32)
    target_link_libraries(tomnet tomnet_base pthread rt jemalloc)
else()
	target_link_libraries(tomnet tomnet_base libprotobuf)
endif()
if(DEBUG_NET)
    add_definitions(-DDEBUG_NET)
endif()

if(NOT WIN32)
option(NET_ENABLE_ASAN "enable sanitize" OFF)
if (NET_ENABLE_ASAN)
    message("--------------------------ENABLE_ASAN ON--------------------------------------")
    set(ENABLE_ASAN ON)
    string(APPEND CMAKE_CXX_FLAGS " -fsanitize=address -fno-omit-frame-pointer")
    # 开启后无法抓取coredump，需要运行时添加如下环境变量方可抓取coredump文件
    # ASAN_OPTIONS=alloc_dealloc_mismatch=0:disable_coredump=0:disable_core=0:abort_on_error=1:sleep_before_dying=0:detect_leaks=1:symbolize=1 XXXX
else ()
    set(ENABLE_ASAN OFF)
    message("--------------------------ENABLE_ASAN OFF--------------------------------------")
endif ()
endif()
#add_definitions(-DASIO_DISABLE_SMALL_BLOCK_RECYCLING)
